LayoutTests:

Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14449
          REGRESSION (r14345-r14375): Absolutely positioned image does not scale to containing element's height

        * fast/replaced/absolute-position-percentage-height-expected.checksum: Added.
        * fast/replaced/absolute-position-percentage-height-expected.png: Added.
        * fast/replaced/absolute-position-percentage-height-expected.txt: Added.
        * fast/replaced/absolute-position-percentage-height.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=14449
          REGRESSION (r14345-r14375): Absolutely positioned image does not scale to containing element's height

        Test: fast/replaced/absolute-position-percentage-height.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calcReplacedHeightUsing): For positioned elements, evaluate
        the percentage with respect to the container's final height.



Canonical link: https://commits.webkit.org/18875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24163 268f45cc-cd09-0410-ab3c-d52691b4dbfc